# Biomni

./: Dockerfile  README-ki.md
biomni/: env_desc.py  env_desc_cm.py
biomni-http/: README.md  main.py  pyproject.toml  startup.sh  supervisord.conf
biomni_env/: bio_env.yml  fixed_env.yml
